# spras

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .test_durations  .yamlfmt.yaml  AR-README.md  Abstract-Class-Demo.ipynb  Anaconda-Navigator.app  CONTRIBUTING.md  DataLoader.py  Dataset.py  LICENSE  MANIFEST.in  PLClass.py  PRM.py  PRRunner.py  README.md  Snakefile  _typos.toml  cytoscape.py  cytoscape_env.yml  environment.yml  full_dag.gv  full_dag_new.gv  get_file.py  graph.gv  graph.ps  log.txt  network.txt.txt  outk-5-paths.txt  outk-5-ranked-edges.txt  parameter-tuning.py  parser.ipynb  parser.py  py4cy-test.ipynb  pyproject.toml  run_htcondor.sh  setup.py  similarity_matrix.py  (+4 more)
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json
.github/workflows/: build-and-remove-template.yml  build-containers.yml  merge-conflicts.yml  push-docker.yml  release.yml  test-docker-wrappers.yml  test-durations.yml  test-spras.yml
Config-Files/: beeline_config.yaml  config.yaml  config_test.yaml  prancer_config.yaml  proposed-template.yaml
ML_debug/: Snakefile
PRRun/: __init__.py  pathlinkerRunner.py  runObj.py  runner.py
analysis/Precison-Recall/: plot_pr.py
analysis/summary/: summary.py
config/: beginner.yaml  config.yaml  config_cyto.yaml  config_prototype.yaml  egfr-param-tuning.yaml  egfr.yaml  intermediate.yaml  schema.json  test.yaml
doc/: README.md  output.md  pathlinker.md
docker/: README.md  docker-demo.py  env.yml
docker-demo/: Dockerfile  README.md
docker-demo/input/: gene_list.mat
docker-wrappers/: README.md  build.py  push.py
docker-wrappers/AllPairs/: Dockerfile  README.md  all-pairs-shortest-paths.py  metadata.json
docker-wrappers/BowTieBuilder/: Dockerfile  README.md  bowtiebuilder.py  metadata.json
docker-wrappers/Cytoscape/: Cytoscape.vmoptions  Dockerfile  README.md  cytoscape_util.py  metadata.json  supervisord.conf
docker-wrappers/DIAMOnD/: Dockerfile  README.md
docker-wrappers/DOMINO/: 0001-fix-split-runner-domino-and-runner-slice.patch  0002-fix-update-imports.patch  Dockerfile  README.md  metadata.json  requirements.txt
docker-wrappers/EdgeLinker/: Dockerfile  README.md  edge_linker.py
docker-wrappers/LocalNeighborhood/: .local_neighborhood_alg.py.swp  Dockerfile  README.md  cygpath.exe.stackdump  local_neighborhood.py  local_neighborhood_alg.py
docker-wrappers/MEO/: Dockerfile  README.md  metadata.json  sample.props  sampleSources.txt  sampleTargets.txt
docker-wrappers/MinCostFlow/: Dockerfile  README.md  metadata.json
docker-wrappers/MuST/: Dockerfile  README.md
docker-wrappers/NetMix2/: Dockerfile  README.md  requirements.txt
docker-wrappers/OmicsIntegrator1/: Dockerfile  Dockerfile_no_conda  README.md  environment.yml  metadata.json  requirements.txt  test-oi1.py
docker-wrappers/OmicsIntegrator2/: 0001-disable-graph-exports.patch  Dockerfile  README.md  environment.yml  metadata.json  test-oi2.py
docker-wrappers/PathLinker/: Dockerfile  README.md  download_files.py  environment.yml  (+4 more)
docs/: README.md  about.rst  conf.py  contributing.rst  htcondor.rst  index.rst  install.rst  output.rst  requirements.txt  timeout.rst  usage.rst  vignettes.rst
example/: EGFR1-edges.txt  EGFR1-nodes.txt  EGFR1-sources.txt  EGFR1-targets.txt  README.md  Wnt-targets.txt
htcondor/: snakemake_long.py  spras.sh  spras.sub
images/: Dockerfile
input/: README.md  alanine,_aspartate_a_train_1510_nodes.txt  alanine,_aspartate_a_train_2535_nodes.txt  alanine,_aspartate_a_train_3273_nodes.txt  alanine,_aspartate_a_train_3711_nodes.txt  alanine,_aspartate_a_train_3781_nodes.txt  alanine,_aspartate_a_train_6130_nodes.txt  alanine,_aspartate_a_train_6672_nodes.txt  alanine,_aspartate_a_train_6727_nodes.txt  alanine,_aspartate_a_train_8527_nodes.txt  alanine,_aspartate_a_train_9941_nodes.txt  alpha-linolenic_acid_train_1854_nodes.txt  alpha-linolenic_acid_train_2371_nodes.txt  alpha-linolenic_acid_train_4263_nodes.txt  alpha-linolenic_acid_train_4939_nodes.txt  alpha-linolenic_acid_train_5635_nodes.txt  alpha-linolenic_acid_train_5783_nodes.txt  alpha-linolenic_acid_train_6633_nodes.txt  alpha-linolenic_acid_train_7454_nodes.txt  alpha-linolenic_acid_train_9373_nodes.txt  alpha-linolenic_acid_train_9806_nodes.txt  alternative-network.txt  alternative-targets.txt  amino_sugar_and_nucl_train_1225_nodes.txt  amino_sugar_and_nucl_train_1494_nodes.txt  amino_sugar_and_nucl_train_1699_nodes.txt  amino_sugar_and_nucl_train_1703_nodes.txt  amino_sugar_and_nucl_train_1775_nodes.txt  amino_sugar_and_nucl_train_2444_nodes.txt  amino_sugar_and_nucl_train_3796_nodes.txt  amino_sugar_and_nucl_train_5376_nodes.txt  amino_sugar_and_nucl_train_6644_nodes.txt  amino_sugar_and_nucl_train_9691_nodes.txt  dummy.txt  egfr-prizes.txt  gs-egfr.txt  gs_edges0.txt  gs_edges1.txt  gs_nodes0.txt  gs_nodes1.txt  (+7 more)
labubu/: dataset-test_data-merged.pickle
spras/: __init__.py  __main__.py  allpairs.py  attribution.py  btb.py  capDSD.py  cgroup_wrapper.sh  cli.py  config.py  containers.py  dataset.py  diamond.py  domino.py  edgelinker.py  errors.py  evaluation.py  interactome.py  interval.py  local_neighborhood.py  logging.py  meo.py  mincostflow.py  must.py  netmix2.py  omicsintegrator1.py  omicsintegrator2.py  pathlinker.py  prm.py  profiling.py  responsenet.py  robust.py  runner.py  rwr.py  secrets.py  statistics.py  strwr.py  tiedie.py  util.py
src/: PRM.py  PRRunner.py  __init__.py  all-pairs-shortest-paths.py  allpairs.py  bowtiebuilder.py  dataset.py  domino.py  interactome.py  local_neighborhood.py  local_neighborhood_practice.py  meo.py  mincostflow.py  omicsintegrator1.py  omicsintegrator2.py  parse_config.py  pathlinker.py  pcsf.py  random_walk.py  runner.py  rwr.py  tiedie.py  util.py  worktable.py
test/: test_config.py  test_container_image_resolution.py  test_ensemble_networks.txt  test_ensemble_networks_graph1.txt  test_ensemble_networks_graph2.txt  test_ensemble_networks_graph3.txt  test_interval.py  test_prepare_inputs.py  test_util.py
util/: play.py  update_schema.py
workflows/: test-spras.yml
(+674 files in other folders)
