[project]
name = "spras"
version = "0.6.0"
description = "Signaling Pathway Reconstruction Analysis Streamliner"
authors = [
  { name = "Anthony Gitter", email = "gitter@biostat.wisc.edu" },
  { name = "Anna Ritz", email = "aritz@reed.edu"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "adjusttext==0.7.3",
    "snakemake==9.6.2",
    "docker==7.1.0",
    "matplotlib==3.10.3",
    "networkx==3.5",
    "pandas==2.3.0",
    "pydantic==2.11.7",
    "numpy==2.3.1",
    "requests==2.32.4",
    "scikit-learn==1.7.0",
    "seaborn==0.13.2",
    "spython==0.3.14",
    "pytimeparse==1.1.8",

    # toolchain deps
    "pip==25.3",
]

[project.optional-dependencies]
dev = [
   # Only required for development
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "pytest-split==0.10.0",
]

[project.urls]
"Homepage" = "https://github.com/Reed-CompBio/spras"
"Issues" = "https://github.com/Reed-CompBio/spras/issues"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
# Autofix errors when possible
fix = true
# Select categories or specific rules from https://beta.ruff.rs/docs/rules/
select = [
    "B", # flake8-bugbear
    "D300", # docstring triple-single-quotes
    "E101", # mixed-spaces-and-tabs
    "E711", # none-comparison
    "E713", # not-in-test
    "E714" , # not-is-test
    "F401", # unused imports
    "F821", # undefined-name
    "F823", # undefined-local
    "F841", # unused-variable
    "I", # isort
    "W292", # missing-newline-at-end-of-file
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spras*"]

# Include non-python executables
[tool.setuptools.package-data]
"spras" = ["cgroup_wrapper.sh"]

# packages tells setuptools what the exported package is called (ie allows import spras)
packages = ["spras", "spras.analysis", "spras.config"]
