[project]
name = "spras"
version = "0.6.0"
description = "Signaling Pathway Reconstruction Analysis Streamliner"
authors = [
  { name = "Anthony Gitter", email = "gitter@biostat.wisc.edu" },
  { name = "Anna Ritz", email = "aritz@reed.edu"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "adjusttext==1.3.0",
    "snakemake==9.19.0",
    "docker==7.1.0",
    "matplotlib==3.10.9",
    "networkx==3.6.1",
    "pandas==3.0.2",
    "pydantic==2.13.3",
    "numpy==2.4.4",
    "requests==2.33.1",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "spython==0.3.14",

    # toolchain deps
    "pip==26.1",
]

[project.optional-dependencies]
dev = [
   # Only required for development
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-split==0.11.0",
]

[project.urls]
"Homepage" = "https://github.com/Reed-CompBio/spras"
"Issues" = "https://github.com/Reed-CompBio/spras/issues"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
# Autofix errors when possible
fix = true
# Select categories or specific rules from https://beta.ruff.rs/docs/rules/
select = [
    "B", # flake8-bugbear
    "D300", # docstring triple-single-quotes
    "E101", # mixed-spaces-and-tabs
    "E711", # none-comparison
    "E713", # not-in-test
    "E714" , # not-is-test
    "F401", # unused imports
    "F821", # undefined-name
    "F823", # undefined-local
    "F841", # unused-variable
    "I", # isort
    "W292", # missing-newline-at-end-of-file
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spras*"]

# Include non-python executables
[tool.setuptools.package-data]
"spras" = ["cgroup_wrapper.sh"]

# packages tells setuptools what the exported package is called (ie allows import spras)
packages = ["spras", "spras.analysis", "spras.config"]
